Add wlib-collections (PagedListView, etc...)

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>wlib-lang</module>
         <module>wlib-log</module>
         <module>wlib-string</module>
+        <module>wlib-collections</module>
     </modules>
 
     <properties>
