[wlib-reflect] fix module name

--- a/wlib-reflect/pom.xml
+++ b/wlib-reflect/pom.xml
@@ -9,7 +9,7 @@
         <version>0.2-SNAPSHOT</version>
     </parent>
 
-    <artifactId>reflect</artifactId>
+    <artifactId>wlib-reflect</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
