--- a/wlib-bukkit/pom.xml
+++ b/wlib-bukkit/pom.xml
@@ -11,6 +11,20 @@
 
     <artifactId>wlib-bukkit</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.20.1-R0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.whbex.lib</groupId>
+            <artifactId>wlib-reflect</artifactId>
+            <version>0.2-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
