--- a/wlib-bukkit/pom.xml
+++ b/wlib-bukkit/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>ru.whbex.lib</groupId>
         <artifactId>main</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>wlib-bukkit</artifactId>
