[PROJECT] Use revision property in subproject dependencies

--- a/wlib-bukkit/pom.xml
+++ b/wlib-bukkit/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>ru.whbex.lib</groupId>
             <artifactId>wlib-reflect</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
