--- a/wlib-log/pom.xml
+++ b/wlib-log/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>ru.whbex.lib</groupId>
             <artifactId>wlib-string</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
