--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
             <dependency>
                 <groupId>ru.whbex.lib</groupId>
                 <artifactId>wlib-log</artifactId>
-                <version>0.2-SNAPSHOT</version>
+                <version>${revision}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
