[PROJECT] Revert to explicit parent version string in subproject configs
Seems like Maven doesn't support properties in parent block: https://issues.apache.org/jira/browse/MNG-624 .
Will revert changes for now

--- a/wlib-bukkit/pom.xml
+++ b/wlib-bukkit/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>ru.whbex.lib</groupId>
         <artifactId>main</artifactId>
-        <version>${revision}</version>
+        <version>0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>wlib-bukkit</artifactId>
